feat: add new release type: .app

--- a/package.json
+++ b/package.json
@@ -27,21 +27,25 @@
     "build:cli": "node ./scripts/build-cli.js",
     "build:libs": "node ./scripts/build-libs.js",
     "build": "npm run build:cli && npm run build:libs",
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
-    "sign-mac": "node mac/sign-macos.js",
-    "notarize-mac": "node mac/notarize-macos.js",
+    "start": "node --force-node-api-uncaught-exceptions-policy=true dist/index.js",
+    "dev": "node --force-node-api-uncaught-exceptions-policy=true -r ts-node/register src/index.ts",
+    "sign-mac": "node scripts/sign-macos.js",
+    "notarize-mac": "node scripts/notarize-macos.js",
     "build-mac-x64": "npm run build:cli && node scripts/build-pkg.js macos-x64",
     "build-mac-arm64": "npm run build:cli && node scripts/build-pkg.js macos-arm64",
     "create-pkg": "node scripts/create-pkg.js",
-    "sign-pkg": "node scripts/sign-pkg.js",
-    "notarize-pkg": "node scripts/notarize-pkg.js",
-    "package-mac-x64": "rimraf dist && npm run rebuild-usb-x64 && npm run build-mac-x64 && npm run sign-mac -- x64 && npm run notarize-mac -- x64 && npm run create-pkg -- x64 && npm run sign-pkg -- x64 && npm run notarize-pkg -- x64 && node scripts/zip-and-move.js",
-    "package-mac-arm64": "rimraf dist && npm run rebuild-usb-arm64 && npm run build-mac-arm64 && npm run sign-mac -- arm64 && npm run notarize-mac -- arm64 && npm run create-pkg -- arm64 && npm run sign-pkg -- arm64 && npm run notarize-pkg -- arm64 && node scripts/zip-and-move.js",
+    "create-app": "node scripts/create-app.js",
+    "sign-macos": "node scripts/sign-macos.js",
+    "notarize-macos": "node scripts/notarize-macos.js",
+    "package-mac-x64": "rimraf dist && npm run rebuild-usb-x64 && npm run build-mac-x64 && npm run sign-macos -- --type executable --arch x64 && npm run notarize-macos -- --type executable --arch x64 --no-staple && npm run create-pkg -- x64 && npm run sign-macos -- --type pkg --arch x64 && npm run notarize-macos -- --type pkg --arch x64 && node scripts/zip-and-move.js --os macos --arch x64 --extension pkg",
+    "package-mac-arm64": "rimraf dist && npm run rebuild-usb-arm64 && npm run build-mac-arm64 && npm run sign-macos -- --type executable --arch arm64 && npm run notarize-macos -- --type executable --arch arm64 --no-staple && npm run create-pkg -- arm64 && npm run sign-macos -- --type pkg --arch arm64 && npm run notarize-macos -- --type pkg --arch arm64 && node scripts/zip-and-move.js --os macos --arch arm64 --extension pkg",
     "package-mac:all": "npm run package-mac-x64 && npm run package-mac-arm64",
+    "package-mac-app-x64": "rimraf dist && npm run rebuild-usb-x64 && npm run build-mac-x64 && npm run create-app -- x64 && npm run sign-macos -- --type app --arch x64 && npm run notarize-macos -- --type app --arch x64 && node scripts/zip-and-move.js --os macos --arch x64 --extension app",
+    "package-mac-app-arm64": "rimraf dist && npm run rebuild-usb-arm64 && npm run build-mac-arm64 && npm run create-app -- arm64 && npm run sign-macos -- --type app --arch arm64 && npm run notarize-macos -- --type app --arch arm64 && node scripts/zip-and-move.js --os macos --arch arm64 --extension app",
+    "package-mac-app:all": "npm run package-mac-app-x64 && npm run package-mac-app-arm64",
     "sign-win": "node windows/sign-windows.js",
     "build-win-x64": "npm run build:cli && node scripts/build-pkg.js win-x64",
-    "package-win-x64": "rimraf dist && npm run rebuild-usb-x64 && npm run build-win-x64 && npm run sign-win -- x64 && node scripts/zip-and-move.js",
+    "package-win-x64": "rimraf dist && npm run rebuild-usb-x64 && npm run build-win-x64 && npm run sign-win -- x64 && node scripts/zip-and-move.js -- --os win --arch x64 --extension exe",
     "package-win:all": "npm run package-win-x64",
     "rebuild-usb-x64": "npm rebuild usb --target=18.0.0 --arch=x64 --dist-url=https://nodejs.org/dist",
     "rebuild-usb-arm64": "npm rebuild usb --target=18.0.0 --arch=arm64 --dist-url=https://nodejs.org/dist",
@@ -74,11 +78,9 @@
   "dependencies": {
     "archiver": "^5.3.1",
     "dotenv": "^17.2.0",
-    "systeminformation": "^5.9.13"
-  },
-  "peerDependencies": {
-    "node-hid": "^3.2.0",
-    "usb": "^2.16.0"
+    "systeminformation": "^5.9.13",
+    "usb": "^2.16.0",
+    "node-hid": "^3.2.0"
   },
   "devDependencies": {
     "@types/archiver": "^5.3.2",
