--- a/package.json
+++ b/package.json
@@ -48,33 +48,9 @@
     "package-win-x64": "rimraf dist && npm run rebuild-usb-x64 && npm run build-win-x64 && npm run sign-win -- x64 && node scripts/zip-and-move.js -- --os win --arch x64 --extension exe",
     "package-win:all": "npm run package-win-x64",
     "rebuild-usb-x64": "npm rebuild usb --target=18.0.0 --arch=x64 --dist-url=https://nodejs.org/dist",
-    "rebuild-usb-arm64": "npm rebuild usb --target=18.0.0 --arch=arm64 --dist-url=https://nodejs.org/dist",
-    "prepublish": "npm run build",
-    "prepublishOnly": "npm run build",
-    "test": "echo \"Warning: no test specified\" && exit 0",
-    "publish:npm": "npm run build && npm publish",
-    "publish:patch": "npm version patch && npm run publish:npm",
-    "publish:minor": "npm version minor && npm run publish:npm",
-    "publish:major": "npm version major && npm run publish:npm",
-    "publish:beta": "npm version prerelease --preid=beta && npm publish --tag beta",
-    "publish:alpha": "npm version prerelease --preid=alpha && npm publish --tag alpha"
+    "rebuild-usb-arm64": "npm rebuild usb --target=18.0.0 --arch=arm64 --dist-url=https://nodejs.org/dist"
   },
-  "keywords": [
-    "cli",
-    "logs",
-    "system-info",
-    "usb-devices",
-    "cross-platform",
-    "diagnostics",
-    "kensington",
-    "device-detection",
-    "system-monitoring",
-    "usb",
-    "bluetooth",
-    "input-devices"
-  ],
   "author": "JackyLin <loveguitar668@gmail.com>",
-  "license": "MIT",
   "dependencies": {
     "archiver": "^5.3.1",
     "dotenv": "^17.2.0",
@@ -96,14 +72,6 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jasonlinkai/kensington-konnect-diagnostics-cli-tool.git"
-  },
-  "bugs": {
-    "url": "https://github.com/jasonlinkai/kensington-konnect-diagnostics-cli-tool/issues"
-  },
-  "homepage": "https://github.com/jasonlinkai/kensington-konnect-diagnostics-cli-tool#readme",
   "files": [
     "dist/",
     "libs/",
