--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
   "dependencies": {
     "archiver": "^5.3.1",
     "dotenv": "^17.2.0",
+    "node-hid": "^3.2.0",
     "systeminformation": "^5.9.13",
-    "usb": "^2.16.0",
-    "node-hid": "^3.2.0"
+    "usb": "^2.16.0"
   },
   "devDependencies": {
     "@types/archiver": "^5.3.2",
@@ -64,6 +64,7 @@
     "esbuild": "^0.25.9",
     "fs-extra": "^11.1.1",
     "pkg": "^5.8.1",
+    "rcedit": "^4.0.1",
     "rimraf": "^5.0.10",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
